# bid-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/bid_scraper/: __init__.py  models.py  normalizers_planetbids.py  send_to_gpt.py  storage.py  stub_server.py  test_normalize_planetbids.py
src/bid_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bid_scraper/src/bid_scraper/: cli.py
src/bid_scraper/src/bid_scraper/src/bid_scraper/: raw.planetbids.json
src/data/opportunities/: RFP-2025-001__Office_Furniture_Procurement__20251227T023247Z.json
